--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,151 +1,50 @@
 version: '3.8'
 
 services:
-  # Cash Flow Management Service
-  cash-flow-service:
-    build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-      - DB_HOST=sqlserver
-      - DB_PORT=1433
-      - DB_NAME=cashflow_db
-      - DB_USERNAME=sa
-      - DB_PASSWORD=YourStrong@Passw0rd
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-    depends_on:
-      - sqlserver
-      - redis
-      - kafka
-    volumes:
-      - ./logs:/app/logs
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/api/v1/cashflows/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
-
-  # SQL Server Database
+  # MS SQL Server for Cash Flow Management Service
   sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: cashflow-sqlserver
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=YourStrong@Passw0rd
-      - MSSQL_PID=Developer
     ports:
       - "1433:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
-      - ./src/main/resources/db/changelog:/docker-entrypoint-initdb.d
-    restart: unless-stopped
+      - ./setup-database.sql:/docker-entrypoint-initdb.d/setup-database.sql
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P YourStrong@Passw0rd -Q 'SELECT 1'"]
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -C -Q 'SELECT 1' || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 60s
+      retries: 5
+    networks:
+      - cashflow-network
 
-  # Redis Cache
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  # Kafka (for messaging)
-  kafka:
-    image: confluentinc/cp-kafka:7.4.0
-    ports:
-      - "9092:9092"
-      - "9093:9093"
+  # Cash Flow Management Service Application
+  cashflow-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: cashflow-management-service
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-    volumes:
-      - kafka_data:/var/lib/kafka/data
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
-
-  # Zookeeper (required for Kafka)
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    volumes:
-      - zookeeper_data:/var/lib/zookeeper/data
-      - zookeeper_logs:/var/lib/zookeeper/log
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "echo srvr | nc localhost 2181"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  # Prometheus (for monitoring)
-  prometheus:
-    image: prom/prometheus:v2.45.0
+      - DB_USERNAME=sa
+      - DB_PASSWORD=YourStrong@Passw0rd
+      - DB_URL=jdbc:sqlserver://sqlserver:1433;databaseName=cashflow_db;encrypt=true;trustServerCertificate=true
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=docker
     ports:
-      - "9090:9090"
-    volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
-    restart: unless-stopped
-
-  # Grafana (for visualization)
-  grafana:
-    image: grafana/grafana:10.0.3
-    ports:
-      - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
-      - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
-    restart: unless-stopped
+      - "8080:8080"
     depends_on:
-      - prometheus
+      sqlserver:
+        condition: service_healthy
+    networks:
+      - cashflow-network
+    restart: unless-stopped
 
 volumes:
   sqlserver_data:
-  redis_data:
-  kafka_data:
-  zookeeper_data:
-  zookeeper_logs:
-  prometheus_data:
-  grafana_data:
+
+networks:
+  cashflow-network:
+    driver: bridge
