feat: implement hierarchical cash flow architecture with contract+position partitioning
- Add hierarchical input structure: Contract -> Position -> Lots
- Implement partitioning by contract + position combinations
- Add ContractPosition and Position models to CashFlowRequest
- Update CalculationEngine to handle hierarchical structure with parallel processing
- Add position-specific calculation methods to PnL, Interest, and Dividend calculators
- Implement type-aware calculations (EQUITY_LEG, INTEREST_LEG, DIVIDEND_LEG)
- Add lot-level cash flow creation with position-specific tracking
- Update MarketDataService to support hierarchical structure
- Add consolidation endpoints for lot, position, and contract levels
- Add CashFlowAggregation and CashFlowHierarchy models
- Fix Lombok annotation processor configuration in Maven
- Update application configurations for enhanced logging
- Maintain backward compatibility with legacy contract-based structure

This enables granular tracking and consolidation at lot, position, and contract levels
while supporting multiple positions per contract with proper partitioning.

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -17,7 +17,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -36,7 +36,7 @@ server:
 
 logging:
   level:
-    com.financial.cashflow: INFO
+    com.financial.cashflow: DEBUG
     org.springframework.web: INFO
     org.hibernate.SQL: WARN
   pattern:
