Externalize weights to config files and fix available_capacity KeyError
- Add get_weights() function to config_loader.py to extract weights from config
- Add weights validation in validate_config()
- Update run_custom_test.py to load weights from config with fallback to defaults
- Update run_demo.py to load weights from config and fix available_capacity KeyError
- Add weights section to allocator_config.json.example and allocator_config.yaml.example
- Fix available_capacity column handling in run_demo.py (same fix as run_custom_test.py)

Users can now specify objective function weights in their config files (JSON or YAML)

--- a/allocation-svc/python/allocator_config.json.example
+++ b/allocation-svc/python/allocator_config.json.example
@@ -34,6 +34,19 @@
     "DEV": 0.50,
     "QA": 0.30,
     "BA": 0.20
+  },
+  
+  "_comment_weights": "Objective function weights (optional). If not specified, defaults are used.",
+  "weights": {
+    "cost_weight": 0.30,
+    "skill_weight": 0.15,
+    "fragmentation_weight": 0.10,
+    "continuity_weight": 0.10,
+    "balance_weight": 0.10,
+    "preference_weight": 0.05,
+    "diversity_weight": 0.05,
+    "leveling_weight": 0.05,
+    "role_balance_weight": 0.10
   }
 }
 
