Enable role allocation ratios as soft constraints and synchronize defaults
- Update allocate_fully_optimized.py to allow role_balance_weight to work independently of enforce_role_allocation
- Update allocator_config_shared.yaml/json to set role_balance_weight: 0.05 for soft encouragement of role ratios
- Update run_demo.py to use same inline defaults as run_custom_test.py (config and weights)
- Update run_custom_test.py to set role_balance_weight: 0.05 to match shared config
- Add ROLE_ALLOCATION_GUIDE.md with comprehensive documentation on role allocation configuration
- Both scripts now have identical default configurations and weights
- Role allocation ratios are now encouraged when possible without hard constraints

--- a/allocation-svc/python/allocator_config_shared.json
+++ b/allocation-svc/python/allocator_config_shared.json
@@ -36,6 +36,7 @@
     "BA": 0.20
   },
   
+  "_comment_weights": "role_balance_weight encourages role ratios when possible (soft constraint)",
   "weights": {
     "cost_weight": 0.0,
     "skill_weight": 0.0,
@@ -45,6 +46,6 @@
     "preference_weight": 0.0,
     "diversity_weight": 0.0,
     "leveling_weight": 0.0,
-    "role_balance_weight": 0.0
+    "role_balance_weight": 0.05
   }
 }
